--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><h1>LariAna Comésticos</h1>
-<p> Home </p> 
-<p> Lista Interativa</p>
+    <header>
+<img src="logo" alt="logo da Empresa" id="logo Empresa">
+ <h1>LariAna Comésticos</h1>
+<nav>
+    <ul>
+        <li> <a href="index.html">home</a></li>
+        <li> <a href="lista.html">lista Interativa</a></li>
+    </ul>
+</nav>
     </header>
-    <h2>Bem Vindo à LariAna Comésticos</h2>
-    <footer>2024 LariAna Cosméticos - Todos os direitos reservados</footer>
+    <main>
+        <h2>Bem Vindo à LariAna Comésticos</h2>
+        <button id="botao">mude cor </button>
+    </main>
     
+    <footer>
+    <p> &copy; 2024 LariAna Cosméticos - Todos os direitos reservados</p>
+</footer>
 </body>
 </html>
