--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-<img src="logo" alt="logo da Empresa" id="logo Empresa">
+<img src="logo" alt="logo da Empresa" id="logo-Empresa">
  <h1>LariAna Comésticos</h1>
 <nav>
     <ul>
