--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empresa xEmpresax</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <header>
@@ -13,18 +13,18 @@
  <h1>LariAna Comésticos</h1>
 <nav>
     <ul>
-        <li> <a href="index.html">home</a></li>
-        <li> <a href="lista.html">lista Interativa</a></li>
+        <li> <a href="index.html">Home</a></li>
+        <li> <a href="lista.html">Lista Interativa</a></li>
     </ul>
 </nav>
     </header>
-    <main>
-        <h2>Bem Vindo à LariAna Comésticos</h2>
+    <main> <h2 id="mensagem">Bem Vindo à LariAna Comésticos</h2>
         <button id="botao">mude cor </button>
     </main>
     
     <footer>
-    <p> &copy; 2024 LariAna Cosméticos - Todos os direitos reservados</p>
-</footer>
+     <p> &copy; 2024 LariAna Cosméticos - Todos os direitos reservados</p>  
+    </footer>
+    <script src ="script.js"></script>
 </body>
 </html>
