--- a/lista.html
+++ b/lista.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="viewporte" content="width=device-, initial-scale=1.0">
     <title>Lista Interativa</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <h2>Itens Clicáveis</h2>
     <ul id="lista-itens">
-        <li data-mensagem="Item 1 foi clicado!">Item 1</li>
-        <li data-mensagem="Item 2 foi clicado!">Item 2</li>
-        <li data-mensagem="Item 3 foi clicado!">Item 3</li>
+        <li data-mensagem="imagem 1 foi clicado!" data-imagem= "imagem 1" data-descrição="descrição item1" >Imagem 1</li>
+        <li data-mensagem="imagem 2 foi clicado!"data-imagem= "imagem 2"  data-descrição="descrição item2">Imagem 2</li>
+        <li data-mensagem="imagem 3 foi clicado!"data-imagem= "imagem 3"  data-descrição="descrição item3" >Imagem 3</li>
     </ul>
     <p id="mensagem-item"></p>
+    <img id="imagem-item " src=""alt="imagem do item" style="display:nome;"/>
+    <p id="descrição-item "></p>
 
     <script scr="lista.js"></script> 
 </body>
